--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
     <script>
         (function() {
-            emailjs.init("c-Ms5MjWbitpDBb-E"); // Public Key của bạn
+            emailjs.init("Ujzk3YqEIFPKRvoF3"); // Public Key của bạn
         })();
     </script>
     <!-- Font Awesome -->
